--- a/app/templates/responders/email_verify.html
+++ b/app/templates/responders/email_verify.html
@@ -4,33 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sussy Bakas - Verify Details</title>
-  <style>
-    #content {
-      background-color: #212529;
-      border: 1px solid #30363d;
-      border-radius: 10px;
-      color: #dee2e6;
-      font-family: "Helvetica Neue", "Liberation Sans", Roboto, Arial, system-ui;
-      margin: 10px auto;
-      max-width: 600px;
-      padding: 10px;
-    }
-    #content h1 {
-      text-align: center;
-    }
-    #content .indent {
-      margin-top: 0px;
-      text-indent: 10px;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-  <div id="content">
+<body class="bg-light">
+<div class="container">
+  <div class="border bg-body my-3 p-3 rounded">
     <h1>Sussy Bakas - Verify Details</h1>
     <hr>
     <b>Dear Lineman,</b>
-    <p class="indent">
-      You have been added to the database by our admins. We're sending this email to you to verify your details. Kindly check the details given below and if they're correct, click the link to confirm it. This link will be valid for only one day.
+    <p>
+      &nbsp;You have been added to the database by our admins. We're sending this email to you to verify your details. Kindly check the details given below and if they're correct, click the link to confirm it. This link will be valid for only one day.
     </p>
     <ul>
       <li><b>Full Name:</b> %s</li>
@@ -41,11 +24,12 @@
       <b>Verify Details:</b>
       <a href="%s">Click Here</a>
     </p>
-    <p>
+    <p class="mb-0">
       <b>Regards,</b>
       <br>
       Team Sussy Bakas
     </p>
   </div>
+</div>
 </body>
 </html>
