--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -11,7 +11,7 @@
 </div>
 <div class="row align-items-center mb-3">
   <div class="col-xl mb-3 mb-xl-0 text-center">
-    <div>Map</div>
+    <div class="border rounded">{{ map_iframe | safe }}</div>
   </div>
   <div class="col-xl">
     <div class="table-responsive border rounded">
