--- a/app/templates/responders/verifydetails.html
+++ b/app/templates/responders/verifydetails.html
@@ -8,7 +8,7 @@
 <div class="alert alert-success mb-0 text-center" role="alert">
   <h4 class="alert-heading">
     {% if identity == 'email_id' %}Email ID{% else %}Phone{% endif %} Verified Successfully! ✅</h4>
-  <p>
+  <p class="mb-0">
     Your details have been verified successfully and from now on, you'll be notified whenever a street light in your area goes faulty.
   </p>
 </div>
