--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -4,34 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="{{ url_for('static', filename='images/branding/favicon.ico') }}" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Sussy Bakas - {{ title }}</title>
-  <style>
-    body {
-      background-color: #000000;
-      color: #dee2e6;
-      font-family: "Helvetica Neue", Roboto, "Liberation Sans", Arial, system-ui;
-    }
-    .content {
-      background-color: #212529;
-      border: 1px solid #495057;
-      border-radius: 10px;
-      margin: 10px auto;
-      max-width: 650px;
-      padding: 10px;
-      text-align: center;
-    }
-    .content h1 {
-      margin: 10px 0px;
-    }
-  </style>
 </head>
-<body>
-  <div class="content">
-    <img src="{{ url_for('static', filename='images/branding/192x192.png') }}" alt="Logo">
-    <h1>Oops, You Made the Website Go Brr...</h1>
-    <em>{{ title }}</em>
-    <hr>
-    <p>{{ message }}</p>
+<body class="bg-light">
+  <div class="container" style="max-width: 600px;">
+    <div class="bg-body border my-3 p-3 rounded text-center">
+      <img src="{{ url_for('static', filename='images/branding/192x192.png') }}" alt="Logo">
+      <h1>Oops, You Made the Website Go Brr...</h1>
+      <em>{{ title }}</em>
+      <hr>
+      <p>{{ message }}</p>
+    </div>
   </div>
 </body>
 </html>
