feature: responder completion link

--- a/app/templates/responders/email_maintenance.html
+++ b/app/templates/responders/email_maintenance.html
@@ -25,6 +25,10 @@
           <b>Acknowledgement:</b>
           <a href="%s">Click Here</a>
         </li>
+        <li>
+          <b>Completion:</b>
+          <a href="%s">Click Here</a>
+        </li>
       </ul>
     </p>
     <p class="mb-0">
